# CDMServer

./: .env.example  .env.sh.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  auth.py  dbtest.py  docker-compose.yml  main.py  models.py  pyproject.toml  pyproject.toml.old  requirements-dev.txt  requirements.txt  start_dev.sh  test_mcp_curl.md  test_tmdb.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 34c06fdd2bad_add_salt_to_user_table.py  6264342fb9b4_.py  7515b9b6fe7a_added_user_table.py  795f68d7b7df_.py  b927f5f6fd44_.py
api/: login.py  manage.py
doc/: USAGE.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.mts  vite.config.ts
frontend/public/: index.html
frontend/src/: AppTheme.tsx  Router.jsx  Router.tsx  constant.js  global.d.ts  index.js  main.jsx  main.tsx  util.js  util.ts
frontend/src/Login/: Login.css  Login.jsx  Login.module.css  Login.tsx
frontend/src/Manage/: Manage.css  Manage.jsx  Manage.module.css  Manage.tsx  constant.js  constant.ts  index.ts  types.ts
frontend/src/translation/: en.json  (+3 more)
images/: background.xcf  favicon.xcf
migrations/versions/: 08823b2939f3_add_token_to_device.py  11eab43c042f_use_int_for_progress.py  12725d34ffd6_add_settings_field_to_devices_table.py  1f8667162460_changed_to_added_date.py  4625ca5cee01_added_start_date.py  4ab96c5b70ed_set_bigint_for_total_size.py  5863a99ceb6e_add_devices_table.py  604fd767e6c8_add_devices_table.py  73ee9852f6b5_add_torrents_table.py  9e4eaa6173b4_first.py  a10117205c0b_rename_available_to_progress.py  c17390c8ccb2_is_admin_is_bool.py  cd1a6612aff5_add_file_path_to_devices.py  e9dc4d610e97_add_file_path_to_devices.py
service/: constant.py  main.py  mcp_server.py  torrents_adapter.py
service/api/: auth.py  client.py  devices.py  download.py  manage.py  oauth.py  omdb.py  status.py  tmdb.py  users.py
service/core/: download_service.py  tmdb_service.py
service/models/: api.py  database.py
service/util/: auth.py  configuration.py  logger.py  mcp_api_key.py  oauth_flow.py
templates/: index.html
(+63 files in other folders)
