[project]
name = "CDMServer"
version = "2.6.0"
description = "A short description of your project"
authors = [{name = "Aron Radics", email = "radics.aron.jozsef@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "fastapi-login",
  "uvicorn",
  "sqlalchemy[asyncio]",
  "aiomysql",
  "mysqlclient",
  "cryptography",
  "pydantic[email]",
  "passlib[bcrypt]",
  "jinja2",
  "ncoreparser",
  "httpx",
  "redis",

  # It is need because: https://github.com/pyca/bcrypt/issues/684
  "bcrypt==3.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pylint",
  "black",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["service"]

[tool.black]
line-length = 120

[tool.pylint]
disable = ["missing-docstring"]
max-line-length = 120