[project]
name = "CDMServer"
version = "2.15.2"
description = "A short description of your project"
authors = [{name = "Aron Radics", email = "radics.aron.jozsef@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "fastapi-login",
  "uvicorn",
  "sqlalchemy[asyncio]",
  "aiomysql",
  "mysqlclient",
  "cryptography",
  "pydantic[email]",
  "passlib[bcrypt]",
  "jinja2",
  "ncoreparser",
  "redis",
  "aiohttp>=3.13.3",
  "themoviedb>=1.0.2",
  # It is need because: https://github.com/pyca/bcrypt/issues/684
  "bcrypt==3.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
